--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Cleaning cache
+        run: npm cache clean -f
+      - name: Install dependencies
+        run: npm install package.json --legacy-peer-deps
       - name: Test and coverage
         run: npm test
       - name: SonarCloud Scan
