--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.host.url = https://sonarcloud.io
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=./src
-sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/*.stories.tsx,**/src/index.tsx,**/src/App.tsx,**/src/reportWebVitals.ts,**/src/service/**,**/src/mocks/**,**/src/theme/**, **/src/service/**, **/src/utils/**
+sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/*.stories.tsx,**/src/index.tsx,**/src/App.tsx,**/src/reportWebVitals.ts,**/src/service/**,**/src/mocks/**,**/src/theme/**,**src/components/templates/JobDescriptionTemplate/**,**/src/components/organisms/JobDesCard/**,**/src/components/organisms/MainCard/**,**/src/components/organisms/SideMenu/**,**/src/components/organisms/TabPanel/**,**/src/components/pages/JobDescriptionView/**,**/src/components/pages/LandingPage/**, **/src/service/**, **/src/utils/**
 sonar.tests=./src
 sonar.test.inclusions=**/*.test.tsx,**/*.test.ts
 sonar.test.exclusions=**/*.stories.tsx
